--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,17 +1,79 @@
-html,
-body {
-  box-sizing: border-box;
+@import "global/variables.scss";
+@import "global/mixins.scss";
+@import "global/functions.scss";
+@import "global/placeholders.scss";
+
+@import "base/accessibility.scss";
+@import "base/body.scss";
+@import "base/typography.scss";
+
+#page {
+	display: grid;
+	grid-template-rows: auto 1fr auto;
+	height: 100vh;
 }
 
-html *,
-body * {
-  box-sizing: inherit;
+.site-branding {
+	@extend %container;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  font-size: 1rem;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: 400;
+.site-title {
+	margin: 0;
+	font-size: 1rem;
+
+	a,
+	img {
+		display: block;
+		max-height: 6em;
+	}
+}
+
+.top-navigation {
+	ul {
+		@extend %unstyled-list;
+		@extend %container;
+
+		display: flex;
+		justify-content: flex-end;
+		padding-top: 1em;
+		padding-bottom: 1em;
+	}
+
+	li {
+		margin-left: 1em;
+	}
+}
+
+.primary-navigation {
+	background-color: #333;
+	text-align: right;
+	width: 100%;
+
+	ul {
+		@extend %unstyled-list;
+		@extend %container;
+
+		display: flex;
+		justify-content: flex-end;
+		padding-top: 1em;
+		padding-bottom: 1em;
+	}
+
+	li {
+		margin-left: 1em;
+	}
+
+	a {
+		color: white;
+	}
+
+	.children {
+		display: none;
+	}
+}
+
+.site-content {
+	article {
+		@extend %container;
+	}
 }
